# m1n3-protocol

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
contracts/: Move.toml  Pub.devnet.toml  Published.toml  README.md
contracts/sources/: btc_math.move  btc_math_tests.move  difficulty.move  dusdc.move  hash_share.move  hash_share_market.move  hash_share_registry.move  hashi_pool.move  hashi_rewards.move  hashi_vault.move  hs_000.move  hs_001.move  hs_002.move  hs_003.move  hs_004.move  hs_005.move  hs_006.move  hs_007.move  m1n3.move  m1n3_confidential_otc.move  miner.move  pool.move  share.move  share_dedup.move
contracts/tests/: hash_share_tests.move  hashi_pool_tests.move  hashi_rewards_tests.move  hashi_vault_tests.move  miner_tests.move  pool_core_tests.move  pool_tests.move  stale_template_tests.move
docs/: architecture.md  contracts.md  hedge.md  integrations.md  miner-modes.md  operator-guide.md  otc.md  protocol.md  sidecar-setup.md  trustless-address.md
hashi-derive/: Cargo.toml
hashi-derive/src/: main.rs
miner-sidecar/: Cargo.toml  README.md
miner-sidecar/src/: config.rs  main.rs  price_feeder.rs  proxy.rs  slot_watcher.rs  stratum_proxy.rs  submit.rs  sui_sender.rs
operator-bot/: Cargo.toml
operator-bot/src/: bitcoin_tx.rs  checkpoint.rs  config.rs  main.rs  pool_state.rs  reward_pipeline.rs  signer.rs
scripts/: create-deepbook-pool-mainnet.mjs  demo-round-close.sh  deploy-mainnet.sh  derive-btc-address.sh  fund-round-batch.sh  hashi-real-deposit-request.sh  hashi-status.sh  init-hashi.sh  place-hashpower-order.sh  preflight.sh  register-hashshare-slots.sh  register-mainnet-slots.sh  serve-web-static.mjs  start-sidecar.sh  start-stratum.sh  vendor-confidential-transfers.sh
stratum-bridge/: Cargo.toml
stratum-bridge/src/: bitcoin_rpc.rs  chain.rs  main.rs  pool.rs  pow.rs  worker.rs
stratum-server/: Cargo.toml  README.md
stratum-server/src/: bitcoin_rpc.rs  main.rs  miner_submit.rs  stratum.rs  sui_queries.rs  sui_submit.rs  template_selector.rs
sui-client/: Cargo.toml
sui-client/src/: bcs_types.rs  keypair.rs  lib.rs  ptb.rs  rpc.rs
trustless-keeper/: Cargo.toml
trustless-keeper/src/: main.rs
web/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/1ntr0/: page.tsx
web/app/block/: page.tsx
web/app/block/[height]/: BlockDetailContent.tsx  page.tsx
web/app/compare/: page.tsx
web/app/docs/: layout.tsx
web/app/hedge/: page.tsx
web/app/info/: page.tsx
web/app/m1/: page.tsx
web/app/marketplace/: page.tsx
web/app/miners/: page.tsx
web/app/otc/: OtcShell.tsx  page.tsx
web/app/pool/: page.tsx
web/app/rewards/: page.tsx
web/app/s3tup/: page.tsx
web/app/shares/: page.tsx
web/app/st4ts/: page.tsx
web/app/template/[templateId]/: TemplateDetailContent.tsx  page.tsx
web/app/templates/: page.tsx
web/app/timing/: page.tsx
web/app/tools/: page.tsx
web/components/: BitBar.tsx  BitGrid.tsx  BlockByteMap.tsx  BlockCubeViz.tsx  ClientRedirect.tsx  ComparisonChart.tsx  ConnectionIndicator.tsx  CostChart.tsx  CostComparison.tsx  DeckButton.tsx  DemoVideo.tsx  DifficultyImpactSimulator.tsx  DifficultyIndicator.tsx  DifficultyResetLog.tsx  DiscountCurveChart.tsx  FeaturedTemplate.tsx  Footer.tsx  HashpriceValueChart.tsx  Hero.tsx  HomeCTA.tsx  IntroPlayer.tsx  IntroScenarioCard.tsx  IntroScenarioChart.tsx  IntroSection.tsx  IntroTimeline.tsx  MarketOverlayChart.tsx  MarketSimulator.tsx  MerkleTreeViz.tsx  MinerCard.tsx  MinerFlowSankey.tsx  MinerLegend.tsx  MinerTable.tsx  MiningComparison.tsx  MiningRevenueCalculator.tsx  Navigation.tsx  OrderBookDepthChart.tsx  OrderBookTable.tsx  PlaceBuyOrderButton.tsx  PoolStats.tsx  PoolTemplatesTable.tsx  (+25 more)
web/components/CardBeamAnimation/: BeamCanvas.tsx  BlockCard.tsx  CardBeamAnimation.tsx  hex-bytes.ts  index.tsx
web/components/hedge/: HedgeDashboard.tsx  HedgePayoffChart.tsx  PositionLadder.tsx
web/components/info/: HowItWorks.tsx
web/components/market/: DeepBookSwapPanel.tsx  OrderBookSidebar.tsx  QuoteSelector.tsx  RoundSelector.tsx  SwapCard.tsx
web/components/otc/: OtcCounterSign.tsx  OtcDraft.tsx  OtcSettlement.tsx
web/components/pool/: MinersTab.tsx  PoolOverviewTab.tsx  TimingTab.tsx
web/components/setup/: CodeBlock.tsx  MinerSetup.tsx  NodeRunnerSetup.tsx  PoolOperatorSetup.tsx  ReferenceSection.tsx  RequirementCard.tsx  SetupTabs.tsx  StepCard.tsx
web/components/templates/: CompareTab.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  info-tooltip.tsx  table.tsx
web/content/docs/: index.mdx  meta.json
web/content/docs/concepts/: difficulty.mdx  hashprice.mdx  index.mdx  meta.json  shares.mdx  staking.mdx  templates.mdx
web/data/: hero-blocks.ts  intro-scenarios.ts  mock-market.ts  steps-layman.ts  steps.ts
web/hooks/: useAnimationFrame.ts  useBalanceManager.ts  useBlockShares.ts  useCountdown.ts  useDeepBookPool.ts  useDifficultyResets.ts  useHashShareBalances.ts  useHashShareRedemptions.ts  useHashiRewardBatches.ts  useHashpowerOrders.ts  useHashprice.ts  useMarketHistory.ts  useMarketVolume.ts  useMinerFlow.ts  useMinerHedge.ts  useMinerWorkRecords.ts  useMiners.ts  useOtcEscrow.ts  usePoolStats.ts  usePoolTemplates.ts  usePredictManager.ts  usePredictOracles.ts  useQuoteCoins.ts  useRecentShares.ts  useRewards.ts  useRoundHistories.ts  useShareMarketOrders.ts  useShares.ts  useStratumMetrics.ts  useSuiBalance.ts  useSuiQuery.ts  useSuiSubscription.ts  useTabParam.ts  useTemplates.ts  useToken.ts
web/lib/: bitcoin-template.ts  bitcoin-utils.ts  block-hashes-client.ts  confidential-constants.ts  constants.ts  deepbook-client.ts  deepbook.ts  hashprice-utils.ts  hedge-math.ts  otc-ticket.ts  predict-client.ts  predict-constants.ts  profitability-utils.ts  quote-format.ts  quote-tokens.ts  source.ts  stratum-client.ts  sui-client.ts  sui-graphql.ts  sui-queries.ts  sui-rpc.ts  sui-shares.ts  types.ts  utils.ts
web/public/: .htaccess
web/scripts/: split-block-hashes.mjs
(+17 files in other folders)
