[workspace]
members = [
    "sui-client",
    "stratum-bridge",
    "miner-sidecar",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex                = "0.4"
sha2               = "0.10"
bytes              = "1"
sui-client         = { path = "sui-client" }
sv1_api            = "4.0.0"
reqwest            = { version = "0.12", features = ["json"] }
bcs                = "0.1"
ed25519-dalek      = { version = "2", features = ["serde"] }
sha3               = "0.10"
blake2             = "0.10"
bs58               = "0.5"
base64             = "0.22"
bech32             = "0.11"
