[workspace]
members = [
    "stratum-server",
    "miner-sidecar",
    "sui-client",
    "operator-bot",
    "hashi-derive",
    "trustless-keeper",
]
resolver = "2"

[workspace.dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", package = "sui-sdk", rev = "a5f422e6ab3b3c6d14237fb54196321f42e017bf" }
bcs = "0.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
bytes = "1"
