[package]
name = "operator-bot"
version = "0.1.0"
edition = "2021"
description = "m1n3 pool operator automation — drives the round → reward → sign → broadcast → confirm lifecycle"

[dependencies]
# HTTP client for Sui JSON-RPC
reqwest = { version = "0.11", features = ["json"] }

# Bitcoin
bitcoincore-rpc = "0.19"
bitcoin         = { version = "0.32", features = ["secp-recovery"] }
secp256k1       = { version = "0.29", features = ["global-context"] }

# Async
tokio   = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow    = "1.0"
thiserror = "1.0"

# Async trait
async-trait = "0.1"

# Hex encoding
hex = "0.4"

[[bin]]
name = "operator-bot"
path = "src/main.rs"
