[package]
name        = "stratum-bridge"
version     = "0.1.0"
edition     = "2021"
description = "Off-chain Stratum v1 ↔ Sui bridge for m1n3-protocol"

[[bin]]
name = "m1n3-bridge"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
hex                = { workspace = true }
sha2               = { workspace = true }
bytes              = { workspace = true }
