[package]
name        = "sui-client"
version     = "0.1.0"
edition     = "2021"
description = "Minimal Sui JSON-RPC client + BCS PTB builder for m1n3-protocol"

[lib]
name = "sui_client"
path = "src/lib.rs"

[dependencies]
anyhow        = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
hex           = { workspace = true }
reqwest       = { workspace = true }
bcs           = { workspace = true }
ed25519-dalek = { workspace = true }
sha3          = { workspace = true }
bs58          = { workspace = true }
base64        = { workspace = true }
bech32        = { workspace = true }
