[package]
name    = "sui-client"
version = "0.1.0"
edition = "2021"
description = "Shared Sui submission client for m1n3 miners"

[dependencies]
sui-sdk    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
hex        = { workspace = true }
